# eodp_students-master

./: README.md  pyproject.toml  requirements.txt  setup.py
auxiliary/: constants.py
common/io/: fileExists.py  l1cProduct.py  mkdirOutputdir.py  readCube.py  readEocfiOrbit.py  readFactor.py  readGeodetic.py  readIsrf.py  readMat.py  readPsf.py  readTwoColumns.py  writeToa.py
common/plot/: plotF.py  plotMat2D.py
common/src/: auxFunc.py  auxGeom.py  baseModule.py
config/: globalConfig.py  ismConfig.py  l1bConfig.py  l1cConfig.py
ism/: mainIsm.py
ism/src/: detectionPhase.py  initIsm.py  ism.py  mtf.py  opticalPhase.py  videoChainPhase.py
l1b/: mainL1b.py
l1b/src/: initL1b.py  l1b.py
l1c/: mainL1c.py
l1c/src/: initL1c.py  l1c.py
